--- a/assets/scss/sections/_post.scss
+++ b/assets/scss/sections/_post.scss
@@ -86,6 +86,7 @@
   }
 
   a {
+    vertical-align:middle;
     display:inline-block;
     max-width:300px;
     overflow:hidden;
